stop horizontal scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: 'Montserrat';
   background-color: #fafafa;
+  overflow-x: hidden;
 }
 .wgs-main {
   padding: 1rem;
